# auditdog

./: .gitignore  README.md
auditagent/: main.py
auditagent/api/: client.py
auditagent/core/: agent.py
auditagent/parsers/: command_parser.py  privilege_escalation_parser.py  ssh_brute_force_parser.py  ssh_parser.py
auditagent/storage/: base.py  json_storage.py
auditdog/: main.py
auditdog/core/: agent.py
auditdog/parsers/: base.py  ssh_parser.py
auditdog/storage/: __init__.py  json_storage.py
auditdog/watchers/: base.py  file_watcher.py
backend/: .dockerignore  .env.example  Dockerfile  auditdog.sh  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/app/: main.py  test_api_smoke.py
backend/app/api/: deps.py
backend/app/api/api_v1/: router.py
backend/app/api/api_v1/endpoints/: agent_integration.py  brute_force.py  command_executions.py  command_risk.py  events.py  privilege_escalations.py  ssh_security.py
backend/app/core/: config.py
backend/app/db/: base.py  init_db.py  session.py
backend/app/db/crud/: base.py  brute_force_attempts.py  command_executions.py  events.py  privilege_escalations.py
backend/app/models/: brute_force_attempt.py  command_execution.py  event.py  privilege_escalation.py
backend/app/schemas/: brute_force.py  command.py  command_execution.py  event.py  privilege_escalation.py
backend/app/services/: openai_service.py  telegram_service.py
backend/scripts/: start-dev.sh  start-prod.sh
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/api/: api.js
(+14 files in other folders)
